aggiornato il numero di versione a 1.1.2 e aggiunto supporto per nuove lingue e scorciatoie da tastiera

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elden-email-extension",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Shows an Elden Ring banner when you send an email",
   "author": "Anna Mettifogo",
   "license": "MIT",
@@ -10,6 +10,7 @@
     "build:firefox": "mkdir -p dist/firefox && cp -r src/* dist/firefox && cp manifest_firefox.json dist/firefox/manifest.json",
     "build:all": "npm run build:chromium && npm run build:firefox",
     "lint:firefox": "web-ext lint --source-dir=dist/firefox",
+    "package:chromium": "npm run build:chromium && cd dist/chromium && zip -r ../../web-ext-artifacts/elden-email-chromium.zip . && cd ../..",
     "package:firefox": "npm run build:firefox && web-ext build --source-dir=dist/firefox --artifacts-dir=web-ext-artifacts"
   },
   "devDependencies": {},
