--- a/manifest_chrome.json
+++ b/manifest_chrome.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Elden Email",
-  "version": "1.1.2",
-  "description": "Shows an Elden Ring banner when you send an email",
+  "name": "Ora mando io",
+  "version": "0.1.0",
+  "description": "mostra un'immagine di Jok3r con su scritto ORA MANDO IO quando viene inviata su una mail. Basato su Elden Email (Chrome: https://chromewebstore.google.com/detail/elden-email/bjaildeadgclghcjhocdbginfpjihmgm, Firefox: https://addons.mozilla.org/en-US/firefox/addon/elden-email/)",
   "permissions": ["storage"],
    "action": {
       "default_popup": "popup.html",
@@ -11,22 +11,12 @@
       }
    },
     "host_permissions": [
-      "https://mail.google.com/*",
-      "https://outlook.office.com/*",
-      "https://outlook.live.com/*",
-      "https://outlook.office365.com/*",
-      "https://mail.proton.me/*",
-      "https://mail.aol.com/*"
+      "https://mail.google.com/*"
     ],
   "content_scripts": [
     {
       "matches": [
-        "https://mail.google.com/*",
-        "https://outlook.office.com/*",
-        "https://outlook.live.com/*",
-        "https://outlook.office365.com/*",
-        "https://mail.proton.me/*",
-        "https://mail.aol.com/*"
+        "https://mail.google.com/*"
       ],
       "js": ["content.js"],
       "css": ["style.css"],
@@ -38,14 +28,9 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["assets/email_sent_yellow.png", "assets/email_sent_blue.png", "assets/email_sent_red.png","assets/elden_ring_sound.mp3", "assets/Matinia.otf"],
+      "resources": ["assets/jok3r.png", "assets/ora_parlo_io.mp3"],
       "matches": [
-        "https://mail.google.com/*",
-        "https://outlook.office.com/*",
-        "https://outlook.live.com/*",
-        "https://outlook.office365.com/*",
-        "https://mail.proton.me/*",
-        "https://mail.aol.com/*"
+        "https://mail.google.com/*"
       ]
     }
   ]
